# nsae

./: .gitignore  INSTALL  LICENSE  Makefile  README  README.md  calc_sync2.py  meson.build  meson.options  note  nsaecli  simplified.txt
disks/: ADV2PC.NSI
disks/reverse/: bootloader_code.z80
disks/reverse/advantage-prom/: advantage_boot_rom.asm
disks/reverse/cpmbootloader/: bootloader.txt
disks/reverse/cpmbootloader/dz80/: bootloader.ctl
disks/reverse/cpmbootloader/manual/: bootloader_code.asm
disks/reverse/dz80/: bootloader.z80
disks/reverse/manual/: convert.py
new/: adv.c  adv.h  cpu.c  cpu.h  crt.c  crt.h  embed.h  fdc.c  fdc.h  hdc.c  hdc.h  io.c  io.h  kb.c  kb.h  main.c  mmu.c  mmu.h  nsae.c  nsae.h  pio.c  pio.h  ram.c  ram.h  sio.h  speaker.c  speaker.h
resources/: meson.build
src/: lopengl.h  ltexture.c  ltexture.h  lutil.c  lutil.h  main.c  meson.build  mmu.c  mmu.h  nsae.c  nsae.h  test.c
src.bak/: cpmbasic_120.h  main.c  nsae.c  nsae.h  shared_io.h~
src.bak/foo/: ltexture.c  lutil.c  lutil.h  main.c
src.bak/z80emu/: z80user.h
src/communicator/: communicator.c  meson.build
src/darray/: darray.h  meson.build
src/foo/: ltexture.h  meson.build
src/libnsaecmd/: meson.build  nsaecmd.h
src/libnsaeipc/: meson.build  nsaecmd.h  nsaeipc.c  nsaeipc.h  nsaeipc_unix.c  nsaeipc_win.c
src/log/: log.c  log.h  meson.build
src/nsae/: adv.c  adv.h  audio.c  audio.h  breakpoints.c  breakpoints.h  colorconf.h  config.h  cpu.c  cpu.h  crt.c  crt.h  darray.c  fdc.c  fdc.h  glinit.h  hdc.c  io.c  io.h  kb.c  kb.h  kb_decode.c  kb_decode.h  main.c  meson.build  mmu.c  mmu.h  nsae.c  nsae.h  nsae_config.h.in  nsae_help  nsae_version.in  nslog.h  pio.c  pio.h  ram.c  ram.h  server.c  server.h  shared_io.h.bak  (+9 more)
src/nsae/z80emu/: z80emu.c  z80user.h
src/nsae_commands/: meson.build  nsae_commands.h
src/nsaectl/: client.c  client.h  debug_server.c  meson.build  nsaectl.c  nsaectl_help  nsaectl_help.new  nsaectl_version.in  nslog.h  stb_ds.c
src/nsdos/: v2_syscalls.h
src/stb_ds/: meson.build
src/z80emu/: z80config.h  z80user.h
subprojects/: .gitignore  sc.wrap  stb.wrap
subprojects/packagefiles/: stb-git-meson.patch
subprojects/packagefiles/sc/: meson.build
tools/: meson.build  mkfd.ns  mkfd.nscpm  mkfd.nsdos  nsaecli  nsls.asm
